[tool.poetry]
name = "epifor"
version = "0.1.0"
description = "Tools to work with and model COVID 19 data"
authors = ["Tomáš Gavenčiak <gavento@gmail.com>"]
license = "MIT"
packages = [
    { include = "epifor" },
]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
requests = "^2.23.0"
numpy = "^1.18.1"
#google-cloud-firestore = "^1.6"
h5py = "^2.10"
unidecode = "^1.1.1"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
pytest = "^5.4.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
