[tool.poetry]
name = "epifor"
version = "0.1.0"
description = "Tools to work with and model COVID 19 data"
authors = ["Tomáš Gavenčiak <gavento@gmail.com>"]
license = "MIT"
packages = [
    { include = "epifor" },
]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
requests = "^2.23.0"
numpy = "^1.18.1"
h5py = "^2.10"
unidecode = "^1.1.1"
plotly = "^4.5.4"
jsonobject = "^0.9.9"
"ruamel.yaml" = "^0.16.10"
scipy = "^1.4.1"
tqdm = "^4.43.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
pytest = "^5.4.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
